change many files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mdi/font": "^7.4.47",
     "@types/bootstrap": "^5.2.10",
     "@vueup/vue-quill": "^1.2.0",
-    "apexcharts": "^3.54.1",
+    "apexcharts": "^5.2.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^2.30.0",
     "echarts": "^5.5.1",
@@ -35,7 +35,7 @@
     "vue": "^3.5.10",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.5",
-    "vue3-apexcharts": "^1.7.0"
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@bootstrap-vue-next/nuxt": "^0.24.23",
@@ -44,6 +44,7 @@
     "@types/nodemailer": "^6.4.17",
     "bootstrap": "^5.3.5",
     "bootstrap-vue-next": "^0.24.23",
+    "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.2"
   }
 }
