--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "nodemailer": "^7.0.5",
-    "nuxt": "^3.13.0",
+    "nuxt": "^4.0.1",
     "nuxt-feather-icons": "^1.2.4",
     "nuxt-swiper": "^1.2.2",
+    "pinia": "^3.0.3",
     "prismjs": "^1.29.0",
     "quill": "^2.0.2",
     "v-calendar": "^3.1.2",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@bootstrap-vue-next/nuxt": "^0.24.23",
+    "@pinia/nuxt": "^0.11.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/nodemailer": "^6.4.17",
