--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue": "^3.5.10",
     "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-apexcharts": "^1.7.0"
   },
   "devDependencies": {
